remove : remove container commands